; ModuleID = '/home/carl/AnghaBench/linux/drivers/hsi/clients/extr_hsi_char.c_hsc_reset_list.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hsi/clients/extr_hsi_char.c_hsc_reset_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hsc_channel = type { i32 }
%struct.list_head = type { i32 }

@list = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hsc_channel*, %struct.list_head*)* @hsc_reset_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hsc_reset_list(%struct.hsc_channel* %0, %struct.list_head* %1) #0 {
  %3 = alloca %struct.hsc_channel*, align 8
  %4 = alloca %struct.list_head*, align 8
  %5 = alloca i64, align 8
  store %struct.hsc_channel* %0, %struct.hsc_channel** %3, align 8
  store %struct.list_head* %1, %struct.list_head** %4, align 8
  %6 = load i32, i32* @list, align 4
  %7 = call i32 @LIST_HEAD(i32 %6)
  %8 = load %struct.hsc_channel*, %struct.hsc_channel** %3, align 8
  %9 = getelementptr inbounds %struct.hsc_channel, %struct.hsc_channel* %8, i32 0, i32 0
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.list_head*, %struct.list_head** %4, align 8
  %13 = call i32 @list_splice_init(%struct.list_head* %12, i32* @list)
  %14 = load %struct.hsc_channel*, %struct.hsc_channel** %3, align 8
  %15 = getelementptr inbounds %struct.hsc_channel, %struct.hsc_channel* %14, i32 0, i32 0
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @spin_unlock_irqrestore(i32* %15, i64 %16)
  %18 = call i32 @hsc_free_list(i32* @list)
  ret void
}

declare dso_local i32 @LIST_HEAD(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_splice_init(%struct.list_head*, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @hsc_free_list(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
